--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
      dockerfile: Dockerfile
    volumes:
      - ./:/src
-   command: sh -c "cd app && PORT=3001 yarn start"
+   command: sh -c "cd app_next && PORT=3001 npm run dev"
    ports:
      - "3001:3001"
    stdin_open: true
